# rusty-chain

./: .gitignore  Cargo.toml  README.md  blockchain.json
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  pr-description-bot.yml  security-scan.yml
docs/superpowers/specs/: 2026-03-14-docker-multinode-design.md
scripts/: generate-pr-description.sh
src/: block.rs  blockchain.rs  crypto.rs  lib.rs  main.rs  persistence.rs  transaction.rs  wallet.rs
