[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.29", features = ["rand-std"] }
rand = "0.9"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
